--- a/portfolio.html
+++ b/portfolio.html
@@ -44,16 +44,16 @@
                 <div class="card">
                     <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Project 1</h5>
+                        <p class="card-text">Servus! Der Sülze krakelen die rosig Presssack. Der hochnäsig Thusnelda liebkosen. Die Stelldichein auftakeln die ausgemergelt Wildfang. Das altbacken Schlachtschüssel. Die Pantoffelheld piesacken der hurtig Rächer. Die Bagage duellieren der hanebüchen Mundraub. Das adrett Kleinod gutheißen. Potzblitz!.</p>
                         <a href="#" class="btn btn-primary">View</a>
                     </div>
                   </div>
                   <div class="card">
                     <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Client A</h5>
+                        <p class="card-text">Sittenstrolch und Gaudi picheln flügge Tohuwabohu. Der Schnösel lobpreisen die halsstarrig Bagage. Der einfältig Panzerkampfwagen. Schwedenfilm und Mundraub meucheln bierernst Schenkelbürste.</p>
                         <a href="#" class="btn btn-primary">View</a>
                       </div>
                     </div>
@@ -63,16 +63,16 @@
                 <div class="card">
                     <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Project 2</h5>
+                        <p class="card-text">Die Bagage duellieren der hanebüchen Mundraub. Das adrett Kleinod gutheißen. Potzblitz!</p>
                         <a href="#" class="btn btn-primary">View</a>
                     </div>
                   </div>
                   <div class="card">
                     <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Client B</h5>
+                      <p class="card-text">Der hochnäsig Thusnelda liebkosen. Die Stelldichein auftakeln die ausgemergelt Wildfang.</p>
                       <a href="#" class="btn btn-primary">View</a>
                     </div>
                   </div>
@@ -83,7 +83,9 @@
 
     <!-- Footer -->
     <footer>
-        
+      <div class="col-12">
+        <p>All rights reserved. &copy; 2020</p>
+      </div>
     </footer>
 
     <!-- Optional JavaScript -->
