--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
       <!-- Header/Navigation Bar -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">Eric Folenta</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,9 @@
     </div>
     <!-- Footer Area -->
     <footer>
-
+      <div class="col-12">
+        <p>All rights reserved. &copy; 2020</p>
+      </div>
     </footer>
 
     <!-- Optional JavaScript -->
