Added picture and social media.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Portfolio Stylesheet -->    
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/5cb5631949.js" crossorigin="anonymous"></script>
+
 
     <title>Portfolio</title>
   </head>
@@ -43,8 +45,15 @@
             <div class="col-12">
                 <h1>About Me!</h1>
                 <hr>
-                <p>Hi, my name is Eric and I am currently a student taking a Full-Stack Developers Bootcamp course through UC Irvine. I currently work for a Korean based company that specializes in creating websites for anyone from restuarants to major clothing retailers. My position is a Junior Front-End Developer and I primarily work with HTML and CSS. I also have experience in Magento 1 & 2 as well as Wordpress and Concrete5.</p>
+                <p><img id="profile" src="images/profile.jpg">Hi, my name is Eric and I am currently a student taking a Full-Stack Developers Bootcamp course through UC Irvine. I currently work for a Korean based company that specializes in creating websites for anyone from restuarants to major clothing retailers. My position is a Junior Front-End Developer and I primarily work with HTML and CSS. I also have experience in Magento 1 & 2 as well as Wordpress and Concrete5.</p>
                 <p>In my free time I enjoying spending time with my wife Emily and we enjoy hiking and exploring around. We have a cat named Teagan and she is a hoot!</p>
+                <div class="clear"></div>
+                <hr>
+                <div id="social">
+                  <h3>Connect with Me!</h3>
+                  <a href="https://facebook.com"><i class="fab fa-facebook-square"> Facebook</i></a><br>
+                  <a href="https://instagram.com"><i class="fab fa-instagram-square"> Instagram</i></a>
+                </div>
             </div>
         </div>
     </div>
