added page heros and images and updated CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,10 @@
             </div>
           </nav>
     </header>
+    <div class="hero">
+      <img src="images/pexels-negative-space-169573.jpg" alt="computer on desk">
+      <div class="title">Portfolio</div>
+    </div>
     <!-- Start Portfolio Content -->
     <div class="container">
         <div class="row">
@@ -44,7 +48,7 @@
                 <div class="card">
                     <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Project 1</h5>
+                        <h5 class="card-title">Code Refactor</h5>
                         <p class="card-text">Servus! Der Sülze krakelen die rosig Presssack. Der hochnäsig Thusnelda liebkosen. Die Stelldichein auftakeln die ausgemergelt Wildfang. Das altbacken Schlachtschüssel. Die Pantoffelheld piesacken der hurtig Rächer. Die Bagage duellieren der hanebüchen Mundraub. Das adrett Kleinod gutheißen. Potzblitz!.</p>
                         <a href="#" class="btn btn-primary">View</a>
                     </div>
