added assignments and images

--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,12 @@
             </div>
           </nav>
     </header>
+    <!-- Hero Start -->
+    <div class="hero">
+      <img src="images/pexels-andrea-piacquadio-840996.jpg" alt="screen of code">
+      <div class="title">Contact</div>
+    </div>
+    <!-- Hero End -->
     <div class="container">
         <div class="row">
             <div class="col-12">
