--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-      <!-- Header/Navigation Bar -->
+      <!-- Header/Navigation Bar Start -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">Eric Folenta</a>
@@ -38,20 +38,22 @@
           </div>
         </nav>
       </header>
-    <!-- Main Content -->
+      <!-- Header/Navigation Bar End -->
+    
     <!-- Hero Start -->
     <div class="hero">
       <img src="images/pexels-pixabay-270348.jpg" alt="screen of code">
       <div class="title">Eric Folenta</div>
     </div>
     <!-- Hero End -->
+    
     <div class="container">
         <!-- About Me Row -->
         <div class="row">
             <div class="col-12">
                 <h1>About Me!</h1>
                 <hr>
-                <p><img id="profile" src="images/profile.jpg">Hi, my name is Eric and I am currently a student taking a Full-Stack Developers Bootcamp course through UC Irvine. I currently work for a Korean based company that specializes in creating websites for anyone from restuarants to major clothing retailers. My position is a Junior Front-End Developer and I primarily work with HTML and CSS. I also have experience in Magento 1 & 2 as well as Wordpress and Concrete5.</p>
+                <p><img id="profile" src="images/profile.jpg" alt="eric posing">Hi, my name is Eric and I am currently a student taking a Full-Stack Developers Bootcamp course through UC Irvine. I currently work for a Korean based company that specializes in creating websites for anyone from restuarants to major clothing retailers. My position is a Junior Front-End Developer and I primarily work with HTML and CSS. I also have experience in Magento 1 & 2 as well as Wordpress and Concrete5.</p>
                 <p>In my free time I enjoying spending time with my wife Emily and we enjoy hiking and exploring around. We have a cat named Teagan and she is a hoot!</p>
                 <div class="clear"></div>
                 <hr>
@@ -69,7 +71,7 @@
         <p>All rights reserved. &copy; 2020</p>
       </div>
     </footer>
-    Footer Area End
+    <!-- Footer Area End -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
