--- a/portfolio.html
+++ b/portfolio.html
@@ -1,101 +1,151 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!-- Portfolio Stylesheet -->    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Portfolio Stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Portfolio</title>
   </head>
+
   <body>
-    <!-- Header/Navigation Bar -->
+    <!-- Header/Navigation Bar Start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">Eric Folenta</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">Eric Folenta</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
+    <!-- Header/Navigation Bar End -->
+    
+    <!-- Hero Start -->
     <div class="hero">
       <img src="images/pexels-negative-space-169573.jpg" alt="computer on desk">
       <div class="title">Portfolio</div>
     </div>
+    <!-- Hero End -->
+
     <!-- Start Portfolio Content -->
     <div class="container">
-        <div class="row">
-            <!-- Column 1 -->
-            <div class="col-lg-6 col-sm-6">
-                <div class="card">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Code Refactor</h5>
-                        <p class="card-text">Servus! Der Sülze krakelen die rosig Presssack. Der hochnäsig Thusnelda liebkosen. Die Stelldichein auftakeln die ausgemergelt Wildfang. Das altbacken Schlachtschüssel. Die Pantoffelheld piesacken der hurtig Rächer. Die Bagage duellieren der hanebüchen Mundraub. Das adrett Kleinod gutheißen. Potzblitz!.</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Client A</h5>
-                        <p class="card-text">Sittenstrolch und Gaudi picheln flügge Tohuwabohu. Der Schnösel lobpreisen die halsstarrig Bagage. Der einfältig Panzerkampfwagen. Schwedenfilm und Mundraub meucheln bierernst Schenkelbürste.</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                      </div>
-                    </div>
+      <div class="row" >
+        <div class="col-12">
+          <h2>Team Projects</h2>
+          <p>The following entries are projects that I worked on with a team of people. We collaborated our skills together to build unique</p>
+          <div class="card">
+            <div class="card-header">
+              Featured Project
             </div>
-            <!-- Column 2 -->
-            <div class="col-lg-6 col-sm-6">
-                <div class="card">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Project 2</h5>
-                        <p class="card-text">Die Bagage duellieren der hanebüchen Mundraub. Das adrett Kleinod gutheißen. Potzblitz!</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Client B</h5>
-                      <p class="card-text">Der hochnäsig Thusnelda liebkosen. Die Stelldichein auftakeln die ausgemergelt Wildfang.</p>
-                      <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                  </div>
+            <div class="card-body">
+              <h5 class="card-title">Remote Workers Recipe Lookip</h5>
+              <p class="card-text">A group project from Spencer Smith, Crystal Han, Josh Sandberg and myself. We created a website that pulls information from 2 databases using API ajax calls and displays information on the front end.</p>
+              <img class="shadow bg-white" src="images/receipe-site-screenshot.jpg" style="float: right; width: 50%;" alt="screenshot of recipe site">
+              <p>Built Using:</p>
+              <ul>
+                <li>Materialize CSS</li>
+                <li>Edamam's Food Database Lookup API</li>
+                <li>CocktailDB API</li>
+                <li>Slick JS Carousel</li>
+              </ul>
+              <a href="https://efolenta.github.io/project-1/" target="_blank" class="btn btn-primary">View Project</a>
             </div>
+          </div>
         </div>
+
+      </div>
+      <div class="row">
+        <!-- Column 1 Start -->
+        <div class="col-12">
+          <h2>Solo Work</h2>
+          <p>Works done by myself using various technologies. See each item for details.</p>
+        </div>
+        <div class="col-lg-6 col-sm-6">
+          <div class="card">
+            <img src="images/code-refactor.jpg" class="card-img-top" alt="code refactor screenshot">
+            <div class="card-body">
+              <h5 class="card-title">Code Refactor</h5>
+              <p class="card-text">Using HTML & CSS, I was tasked to refactor HTML code to make it clean and universal so any front-end developer can easily read!</p>
+              <a href="https://efolenta.github.io/01-refactor/" class="btn btn-primary">View</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/password-generator.jpg" class="card-img-top" alt="screenshot of password generator">
+            <div class="card-body">
+              <h5 class="card-title">Password Generator</h5>
+              <p class="card-text">Using HTML, CSS & JavaScript, I created a password generator that gives a user a secure password.</p>
+              <a href="https://efolenta.github.io/03-password-generator/" target="_blank" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+        <!-- Column 1 End -->
+
+        <!-- Column 2 Start -->
+        <div class="col-lg-6 col-sm-6">
+          <div class="card">
+            <img src="images/weather-dashboard.jpg" class="card-img-top" alt="screenshot of weather dashboard">
+            <div class="card-body">
+              <h5 class="card-title">Weather Dashboard</h5>
+              <p class="card-text">Using OpenWeather API, I created a front end dashboard to display weather from any cities around the world that a user enters.</p>
+              <a href="https://efolenta.github.io/06-weather-dashboard/" target="_blank" class="btn btn-primary">View</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/code-quiz.jpg" class="card-img-top" alt="screenshot of quiz">
+            <div class="card-body">
+              <h5 class="card-title">Quiz Challenge</h5>
+              <p class="card-text">Using HTML, CSS & JavaScript, I created a multi question Quiz that keeps score and has a timer.</p>
+              <a href="https://efolenta.github.io/04-quiz-challenge/" target="_blank" class="btn btn-primary">View</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/scheduler.jpg" class="card-img-top" alt="screenshot of scheduler">
+            <div class="card-body">
+              <h5 class="card-title">Day Planner</h5>
+              <p class="card-text">Using HTML, CSS & JavaScript, this day planner keeps time and track of your tasks for the day.</p>
+              <a href="https://efolenta.github.io/05-day-planner/" target="_blank" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End Portfolio Content -->
 
-    <!-- Footer -->
+    <!-- Footer Start -->
     <footer>
       <div class="col-12">
         <p>All rights reserved. &copy; 2020</p>
       </div>
     </footer>
+    <!-- Footer End -->
 
-    <!-- Optional JavaScript -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
+
 </html>
